# candle-llm-chat

./: .gitignore  Cargo.toml  README.md  models.toml
src/: lib.rs  pipe.rs
src/model/: config.rs  hub.rs  mod.rs  registry.rs
src/utils/: chat.rs  load.rs  proxy.rs
